--- a/public/components/AdminProduct/AdminProduct.css
+++ b/public/components/AdminProduct/AdminProduct.css
@@ -578,4 +578,19 @@
     margin-top: 4px;
     font-weight: normal!important;
     color: red!important;
-  }
+}
+
+.image-container img {
+  width: 100%;        
+  height: 100%;      
+  /* object-fit: cover;   */
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.img-container {
+  /* width: 300px; 
+  height: 200px; 
+  overflow: hidden; */
+}
